deploy/manifests-monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-dnsi
     kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - "*.ejirolaureld.me"
      secretName: wildcard-cert

  rules:
    - host: "grafana.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
