deploy/manifests-monitoring/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
     cert-manager.io/cluster-issuer: letsencrypt-dnsi
     kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - "prometheus.ejirolaureld.me"
      secretName: wildcard-cert-f8f62

  rules:
    - host: "prometheus.ejirolaureld.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
